// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should get translations for index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"**My API - v0.0** • **API**

***

# :tada: Custom Index Title

## Modules

- [module-1](module-1/README.md)
- [module-2](module-2/README.md)

***

Copyright Test
"
`;

exports[`Text should get translations for index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"**My API - v0.0 (jp)** • **Docs (jp)**

***

# typedoc-stubs v0.0

## モジュール

- [module-1](module-1/README.md)
- [module-2](module-2/README.md)

***

Copyright Test (jp)
"
`;

exports[`Text should get translations for member page: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**My API - v0.0**](../../README.md) • **API**

***

[typedoc-stubs v0.0](../../README.md) / [module-1](../README.md) / SomeInterface

# CoolInterfaces: SomeInterface

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`someProp?\` | \`boolean\` | Description for prop someProp |

## Events

| Event | Type |
| :------ | :------ |
| \`someEvent\` | \`MouseEvent\` |

***

Copyright Test
"
`;

exports[`Text should get translations for member page: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**My API - v0.0 (jp)**](../../README.md) • **Docs (jp)**

***

[typedoc-stubs v0.0](../../README.md) / [module-1](../README.md) / SomeInterface

# インターフェイス: SomeInterface

## プロパティ

| プロパティ | Type (jp) | 説明 |
| :------ | :------ | :------ |
| \`someProp?\` | \`boolean\` | Description for prop someProp |

## Events

| イベント | Type (jp) |
| :------ | :------ |
| \`someEvent\` | \`MouseEvent\` |

***

Copyright Test (jp)
"
`;

exports[`Text should get translations for module page: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**My API - v0.0**](../README.md) • **API**

***

[typedoc-stubs v0.0](../README.md) / module-1

# module-1

## TOC

### CoolInterfaces

- [SomeInterface](interfaces/SomeInterface.md)

***

Copyright Test
"
`;

exports[`Text should get translations for modules page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**My API - v0.0**](README.md) • **API**

***

[typedoc-stubs v0.0](README.md) / module-2

# module-2

## CoolVars

### constA

> \`const\` **constA**: \`true\` = \`true\`

***

Copyright Test
"
`;

exports[`Text should get translations for sidebar: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "module-1",
    "kind": 2,
    "path": "module-1/README.md",
    "children": [
      {
        "title": "CoolInterfaces",
        "children": [
          {
            "title": "SomeInterface",
            "kind": 256,
            "path": "module-1/interfaces/SomeInterface.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2/README.md",
    "children": [
      {
        "title": "CoolVars",
        "children": [
          {
            "title": "constA",
            "kind": 32,
            "path": "module-2/variables/constA.md"
          }
        ]
      }
    ]
  }
]"
`;
